new teaching layout

--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -1,6 +1,6 @@
 <br>
 
-<title>Courses – Suraj Rampure</title>
+<title>Data 100 Resources – Suraj Rampure</title>
 
 <head>
   <meta charset="utf-8">
@@ -28,44 +28,71 @@
 
 <img src='../resources/pictures/miscircle.png' width=100>
 
-# Courses – Suraj Rampure
+# Data 100 Resources – Suraj Rampure
 
-[Home](../index.html) &nbsp; [Teaching](../teaching/index.html) &nbsp; **[Courses](index.html)**
+[Home](../index.html) &nbsp; [Teaching](index.html) &nbsp; [Courses](../courses/index.html)
 
 ---
 
-### Computer Science
+## Fall 2019
 
-- 61C: Great Ideas in Computer Architecture (in progress, Fall 2019)
-- W186: Databases (Spring 2019)
-- 189: Machine Learning (Spring 2018)
-- 174: Random Algorithms and Discrete Probability (Spring 2018)
-- 170: Efficient Algorithms and Intractable Problems (Fall 2017)
-- 61B: Data Structures (Spring 2017)
-- 195: Social Implications of Computing (Fall 2016)
-- 70: Discrete Mathematics and Probability Theory (Fall 2016)
-- 61A: Structure and Interpretation of Computer Programs (Fall 2016)
+- **Lab:** Monday, 3-4PM, Evans B6 (118)
+- **Disc:** Wednesday, 3-4PM, Etcheverry 3107 (118A)
+- **Office Hours:** Tuesday, 1-3PM, Evans 426 (subject to change, check course website)
+- **Anonymous Feedback:** Fill out [this form](https://forms.gle/DC3GAqTbV6u8w9nZ6) to give me anonymous feedback on my teaching.
 
-### Electrical Engineering
+Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit about yourself.
 
-- 229A: Information Theory (Fall 2018)
-- 16B: Designing Information Systems and Devices II (Fall 2018)
-- 126: Probability and Random Processes (Fall 2017)
-- 16A: Designing Information Systems and Devices I (Spring 2017)
+| Week | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |
+| --- | --- | 
+| 2 | marked-up worksheet, video (coming soon) |
 
-### Mathematics
+<br><br><br><br><br>
 
-- 115: Number Theory (in progress, Fall 2019)
-- 113: Abstract Algebra (Spring 2019)
-- 53: Multivariable Calculus (Summer 2017)
-- 128A: Numerical Analysis (Spring 2017)
-- 110: Linear Algebra (Spring 2017)
-- 1A: Calculus I (Fall 2016)
+## Archive from Previous Semesters
 
-### Other Science and Engineering
+Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under "Fall 2019", so don't worry about searching through this if you're a current student.
 
-- Physics 7B: Electricity and Magnetism (Fall 2018)
-- Physics 7A: Kinematics and Dynamics (Spring 2018)
-- Engineering 120: Engineering Economics (Fall 2017)
-- Chemistry 1A/L: General Chemistry and Lab (Fall 2016)
 
+**Discussion Resources:**
+
+- Week 1: [slides](../resources/ds100/sp19/disc01_slides.pdf), [marked-up worksheet](../resources/ds100/sp19/disc01_markup.pdf)
+- Week 3: [marked-up worksheet](../resources/ds100/sp19/disc03_markup.pdf)
+- Week 5: [marked-up worksheet](../resources/ds100/sp19/disc05_markup.pdf)
+- Week 6: [discussion slides](../resources/ds100/sp19/disc06_slides.pdf), [marked-up worksheet](../resources/ds100/sp19/disc06_markup.pdf)
+- Week 10: [notes](../resources/ds100/sp19/disc10_notes.pdf)
+
+
+**Discussion Walkthrough Videos:**
+
+- [Discussion 6 Walkthrough](https://www.youtube.com/watch?v=Rigtuige5bU&feature=youtu.be) (SP19)
+- [Discussion 7 Walkthrough](https://www.youtube.com/watch?v=5-hsWWR3MXY&feature=youtu.be) (SP19)
+- [Discussion 8 Walkthrough](https://www.youtube.com/watch?v=MDtI9yYJfn0&feature=youtu.be) (SP19)
+- [Discussion 9 Walkthrough](https://www.youtube.com/watch?v=FRviVt0NNhE&feature=youtu.be) (SP19)
+- [Discussion 12 Walkthrough](https://www.youtube.com/watch?v=EfK_m1jCerM&feature=youtu.be) (SP19)
+
+
+**Exam Walkthrough Videos:**
+
+- [Fall 2017 Midterm Walkthrough](https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY) (FA18)
+- [Spring 2018 Final Walkthrough](https://www.youtube.com/watch?v=5JU0Xe46DnA&list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr) (FA18)
+- [Summer 2019 Midterm Walkthrough](https://www.youtube.com/watch?v=7UVjFuRTHMc) (SU19)
+
+**Review Slides**:
+
+- [Midterm 2 Review Slides](../resources/ds100/midterm2review.pdf) (SP19)
+- [Final Review Slides (regression, BV, regularization)](http://www.surajrampure.com/resources/ds100/final_review_regression.pdf) ([exam mark-up](http://www.surajrampure.com/resources/ds100/final_review_exam_markup.pdf))  (SP19)
+- [Final Review Slides (classification, logistic regression)](http://www.surajrampure.com/resources/ds100/final_review_classification.pdf) (SP19)
+- [Final Review Slides (sampling, bootstrapping, confidence intervals)](http://www.surajrampure.com/resources/ds100/final_review_bootstrap_sampling.pdf) ([notebook](http://www.surajrampure.com/resources/ds100/final_review_bootstrap_notebook.html)) ([worksheet](http://www.surajrampure.com/resources/ds100/final_review_probability.pdf)) (SP19)
+
+
+**Other Notes**:
+
+- [Connections between different approaches to linear regression](../resources/ds100/regression-connections.html)
+- [Derivation of the Sigmoid Function](../resources/ds100/sigmoid.html)
+- [Parameters Diverging to Infinity in Logistic Regression](../resources/ds100/infinity_parameters_logistic.html)
+- [Walkthrough notebook on Kernel Density Estimation](../resources/ds100/KDE.html) ([raw](../resources/ds100/KDE.ipynb))
+- [Notebook on Transformations](../resources/ds100/Transformations.html) ([raw](../resources/ds100/Transformations.ipynb))
+- [Note on Eigenvalues vs. Singular Values](../resources/ds100/eigen-singular.html)
+
+<br>
