--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -38,7 +38,7 @@
 
 - **Lab:** Monday, 3-4PM, Evans B6 (118)
 - **Disc:** Wednesday, 3-4PM, Etcheverry 3107 (118A)
-- **Office Hours:** Tuesday, 1-3PM, Evans 426 (subject to change, check course website)
+- **Office Hours:** Tuesday, 2-3PM (Jacobs 220); Thursday 12-1PM (Evans 426)
 - **Anonymous Feedback:** Fill out [this form](https://forms.gle/DC3GAqTbV6u8w9nZ6) to give me anonymous feedback on my teaching.
 
 Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit about yourself.
