--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -47,7 +47,8 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 | --- | --- | 
 | 2 | [slides](../resources/ds100/fa19/disc2_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc2_markup.pdf), [video](https://youtu.be/0CiUCgSr-Mg) |
 | 3 | [slides](../resources/ds100/fa19/disc3_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc3_markup.pdf), [video](https://www.youtube.com/watch?v=1NKaM-bHKWk&feature=youtu.be) |
-| 4 | video |
+| 4 | N/A |
+| 5 | [Note on Transformations](http://www.surajrampure.com/resources/ds100/Transformations.html), [Note on Kernel Density Estimation](http://www.surajrampure.com/resources/ds100/KDE.html) |
 
 <br><br><br><br><br>
 
