--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -49,6 +49,20 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 | 3 | [slides](../resources/ds100/fa19/disc3_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc3_markup.pdf), [video](https://www.youtube.com/watch?v=1NKaM-bHKWk&feature=youtu.be) |
 | 4 | N/A |
 | 5 | [marked-up worksheet](../resources/ds100/fa19/disc5_markup.pdf), video, [note on transformations](http://www.surajrampure.com/resources/ds100/Transformations.html), [note on Kernel Density Estimation](http://www.surajrampure.com/resources/ds100/KDE.html) |
+| 6 | [video](https://www.youtube.com/watch?v=3VWzyIhejuE&feature=youtu.be) |
+
+<br>
+
+**Review Slides:**
+
+- [Loss and Risk Midterm 1 Review](../resources/ds100/fa19/loss-and-risk-mt1.pdf)
+
+**Exam Walkthrough Videos:**
+
+- [Fall 2017 Midterm Walkthrough](https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY) (FA18)
+- [Spring 2018 Final Walkthrough](https://www.youtube.com/watch?v=5JU0Xe46DnA&list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr) (FA18)
+- [Summer 2019 Midterm Walkthrough](https://www.youtube.com/watch?v=7UVjFuRTHMc) (SU19)
+- [Spring 2019 Midterm 1 Walkthrough](https://www.youtube.com/watch?v=F3tu9PZHhyU&feature=youtu.be) (FA19)
 
 <br><br><br><br><br>
 
@@ -74,12 +88,6 @@ Here are some of the resources I created over the past few semesters for Data 10
 - [Discussion 9 Walkthrough](https://www.youtube.com/watch?v=FRviVt0NNhE&feature=youtu.be) (SP19)
 - [Discussion 12 Walkthrough](https://www.youtube.com/watch?v=EfK_m1jCerM&feature=youtu.be) (SP19)
 
-
-**Exam Walkthrough Videos:**
-
-- [Fall 2017 Midterm Walkthrough](https://www.youtube.com/playlist?list=PLQCcNQgUcDfqAD1D9g9P9SUYo0tdXQpSY) (FA18)
-- [Spring 2018 Final Walkthrough](https://www.youtube.com/watch?v=5JU0Xe46DnA&list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr) (FA18)
-- [Summer 2019 Midterm Walkthrough](https://www.youtube.com/watch?v=7UVjFuRTHMc) (SU19)
 
 **Review Slides**:
 
