--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -48,8 +48,8 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 | 2 | [slides](../resources/ds100/fa19/disc2_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc2_markup.pdf), [video](https://youtu.be/0CiUCgSr-Mg) |
 | 3 | [slides](../resources/ds100/fa19/disc3_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc3_markup.pdf), [video](https://www.youtube.com/watch?v=1NKaM-bHKWk&feature=youtu.be) |
 | 4 | N/A |
-| 5 | [marked-up worksheet](../resources/ds100/fa19/disc5_markup.pdf), video, [note on transformations](http://www.surajrampure.com/resources/ds100/Transformations.html), [note on Kernel Density Estimation](http://www.surajrampure.com/resources/ds100/KDE.html) |
-| 6 | [video](https://www.youtube.com/watch?v=3VWzyIhejuE&feature=youtu.be) |
+| 5 | [marked-up worksheet](../resources/ds100/fa19/disc5_markup.pdf), [video](https://youtu.be/fJHgr4ttMPk), [note on transformations](http://www.surajrampure.com/resources/ds100/Transformations.html) |
+| 6 | [video](https://www.youtube.com/watch?v=3VWzyIhejuE&feature=youtu.be), [note on Kernel Density Estimation](http://www.surajrampure.com/resources/ds100/KDE.html) |
 
 <br>
 
