--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -50,6 +50,7 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 | 4 | N/A |
 | 5 | [marked-up worksheet](../resources/ds100/fa19/disc5_markup.pdf), [video](https://youtu.be/fJHgr4ttMPk), [note on transformations](http://www.surajrampure.com/resources/ds100/Transformations.html) |
 | 6 | [video](https://www.youtube.com/watch?v=3VWzyIhejuE&feature=youtu.be), [note on Kernel Density Estimation](http://www.surajrampure.com/resources/ds100/KDE.html) |
+| 7 | [note on PCA](../resources/ds100/fa19/pca-demo.html) ([raw](../resources/ds100/fa19/pca-demo-raw.ipynb)) |
 
 <br>
 
