--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -51,7 +51,8 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 | 5 | [marked-up worksheet](../resources/ds100/fa19/disc5_markup.pdf), [video](https://youtu.be/fJHgr4ttMPk), [note on transformations](http://www.surajrampure.com/resources/ds100/Transformations.html) |
 | 6 | [video](https://www.youtube.com/watch?v=3VWzyIhejuE&feature=youtu.be), [note on Kernel Density Estimation](http://www.surajrampure.com/resources/ds100/KDE.html) |
 | 7 | [note on PCA](../resources/ds100/fa19/pca-demo.html) ([raw](../resources/ds100/fa19/pca-demo-raw.ipynb)) |
-| 8 | [slides](../resources/ds100/fa19/disc8_slides.pdf), [supplemental notebook](../resources/ds100/fa19/disc8_notebook.html) ([raw](../resources/ds100/fa19/disc8-raw.ipynb))
+| 8 | [slides](../resources/ds100/fa19/disc8_slides.pdf), [supplemental notebook](../resources/ds100/fa19/disc8_notebook.html) ([raw](../resources/ds100/fa19/disc8-raw.ipynb)) |
+| 9 | [slides](../resources/ds100/fa19/disc9_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc9_markup.pdf)  |
 
 <br>
 
