--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -53,6 +53,7 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 | 7 | [note on PCA](../resources/ds100/fa19/pca-demo.html) ([raw](../resources/ds100/fa19/pca-demo-raw.ipynb)) |
 | 8 | [slides](../resources/ds100/fa19/disc8_slides.pdf), [supplemental notebook](../resources/ds100/fa19/disc8_notebook.html) ([raw](../resources/ds100/fa19/disc8-raw.ipynb)) |
 | 9 | [slides](../resources/ds100/fa19/disc9_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc9_markup.pdf)  |
+| 10 | [slides](../resources/ds100/fa19/disc10_slides.pdf)  |
 
 <br>
 
