--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -41,8 +41,6 @@
 - **Office Hours:** Tuesday, 2-3PM (Jacobs 220); Thursday 12-1PM (Evans 426)
 - **Anonymous Feedback:** Fill out [this form](https://forms.gle/DC3GAqTbV6u8w9nZ6) to give me anonymous feedback on my teaching.
 
-Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit about yourself.
-
 | Week | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |
 | --- | --- | 
 | 2 | [slides](../resources/ds100/fa19/disc2_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc2_markup.pdf), [video](https://youtu.be/0CiUCgSr-Mg) |
@@ -54,6 +52,7 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 | 8 | [slides](../resources/ds100/fa19/disc8_slides.pdf), [supplemental notebook](../resources/ds100/fa19/disc8_notebook.html) ([raw](../resources/ds100/fa19/disc8-raw.ipynb)) |
 | 9 | [slides](../resources/ds100/fa19/disc9_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc9_markup.pdf)  |
 | 10 | [slides](../resources/ds100/fa19/disc10_slides.pdf)  |
+| 11 | [slides](../resources/ds100/fa19/disc11_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc11_markup.pdf)  |
 
 <br>
 
@@ -67,6 +66,10 @@ Please fill out [this form](http://tinyurl.com/firstdiscdata) to tell me a bit a
 - [Spring 2018 Final Walkthrough](https://www.youtube.com/watch?v=5JU0Xe46DnA&list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr) (FA18)
 - [Summer 2019 Midterm Walkthrough](https://www.youtube.com/watch?v=7UVjFuRTHMc) (SU19)
 - [Spring 2019 Midterm 1 Walkthrough](https://www.youtube.com/watch?v=F3tu9PZHhyU&feature=youtu.be) (FA19)
+
+**Lectures:**
+
+- Lecture 20 (Logistic Regression, Cross Entropy Loss, Classification): [slides](https://docs.google.com/presentation/d/1HM3WU4a_lzYa5iz_S_XhsLC9NXy5y45h33Xm79_AStQ/edit?pli=1&ts=5dc10004#slide=id.g4df0212f45_0_0) [webcast](https://www.youtube.com/watch?v=ky8ESSqw0Pc)
 
 <br><br><br><br><br>
 
