--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -50,9 +50,11 @@
 | 6 | [video](https://www.youtube.com/watch?v=3VWzyIhejuE&feature=youtu.be), [note on Kernel Density Estimation](http://www.surajrampure.com/resources/ds100/KDE.html) |
 | 7 | [note on PCA](../resources/ds100/fa19/pca-demo.html) ([raw](../resources/ds100/fa19/pca-demo-raw.ipynb)) |
 | 8 | [slides](../resources/ds100/fa19/disc8_slides.pdf), [supplemental notebook](../resources/ds100/fa19/disc8_notebook.html) ([raw](../resources/ds100/fa19/disc8-raw.ipynb)) |
-| 9 | [slides](../resources/ds100/fa19/disc9_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc9_markup.pdf)  |
+| 9 | [slides](../resources/ds100/fa19/disc9_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc9_markup.pdf), [video](https://youtu.be/xC_JoI6gob8)  |
 | 10 | [slides](../resources/ds100/fa19/disc10_slides.pdf)  |
-| 11 | [slides](../resources/ds100/fa19/disc11_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc11_markup.pdf)  |
+| 11 | [slides](../resources/ds100/fa19/disc11_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc11_markup.pdf), [video](https://youtu.be/hC1-faGXxjQ)  |
+| 12 | N/A (midterm) |
+| 13 | [slides](../resources/ds100/fa19/disc13_slides.pdf) |
 
 <br>
 
@@ -66,6 +68,7 @@
 - [Spring 2018 Final Walkthrough](https://www.youtube.com/watch?v=5JU0Xe46DnA&list=PLQCcNQgUcDfrBO7dpL-Pv6e0LYGeqsHKr) (FA18)
 - [Summer 2019 Midterm Walkthrough](https://www.youtube.com/watch?v=7UVjFuRTHMc) (SU19)
 - [Spring 2019 Midterm 1 Walkthrough](https://www.youtube.com/watch?v=F3tu9PZHhyU&feature=youtu.be) (FA19)
+- [Spring 2019 Midterm 2 Walkthrough](https://youtu.be/-XCRQ6CKNb0) (FA19)
 
 **Lectures:**
 
