--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -55,6 +55,8 @@
 | 11 | [slides](../resources/ds100/fa19/disc11_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc11_markup.pdf), [video](https://youtu.be/hC1-faGXxjQ)  |
 | 12 | N/A (midterm) |
 | 13 | [slides](../resources/ds100/fa19/disc13_slides.pdf) |
+| 14 | N/A (Thanksgiving) |
+| 15 | [slides](..resources/ds100/fa19/disc15_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc15_markup.pdf) |
 
 <br>
 
