--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -63,6 +63,7 @@
 **Review Slides:**
 
 - [Loss and Risk Midterm 1 Review](../resources/ds100/fa19/loss-and-risk-mt1.pdf)
+- [Logistic Regression, Classification, Evaluating Classifiers Final Review](../resources/ds100/fa19/classificationfa19.pdf)
 
 **Exam Walkthrough Videos:**
 
