--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -30,16 +30,35 @@
 
 # Data 100 Resources – Suraj Rampure
 
-[Home](../index.html) &nbsp; [Teaching](index.html) &nbsp; [Courses](../courses/index.html)
+[Home](../index.html) &nbsp; [Teaching](index.html)
 
 ---
 
-## Fall 2019
+## Spring 2020
 
-- **Lab:** Monday, 3-4PM, Evans B6 (118)
-- **Disc:** Wednesday, 3-4PM, Etcheverry 3107 (118A)
-- **Office Hours:** Tuesday, 2-3PM (Jacobs 220); Thursday 12-1PM (Evans 426)
-- **Anonymous Feedback:** Fill out [this form](https://forms.gle/DC3GAqTbV6u8w9nZ6) to give me anonymous feedback on my teaching.
+- **Labs:** Tuesday 1-2PM in Evans B6, Tuesday 2-3PM in Evans B6
+- **Discussions:** Friday 12-1PM in Etcheverry 3111, Friday 1-2PM in Etcheverry 3119
+- **Office Hours:** Wednesday 3-5PM in Soda 341A
+- **Anonymous Feedback:** Fill out [this form](https://tinyurl.com/feedbacksuraj) to give me anonymous feedback on my teaching.
+
+<br>
+
+Welcome to Data 100! If you're in my discussions or labs, fill out [this form](https://tinyurl.com/welcometo100) to tell me more about yourself.
+
+<br>
+
+| Week | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |
+| --- | --- | 
+| 1 | coming soon |
+
+<br><br><br><br><br>
+
+## Archive from Previous Semesters
+
+Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under "Spring 2020", so don't worry about searching through this if you're a current student.
+
+
+**Fall 2019 Discussion Resources:**
 
 | Week | &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; |
 | --- | --- | 
@@ -58,12 +77,15 @@
 | 14 | N/A (Thanksgiving) |
 | 15 | [slides](../resources/ds100/fa19/disc15_slides.pdf), [marked-up worksheet](../resources/ds100/fa19/disc15_markup.pdf) |
 
-<br>
 
-**Review Slides:**
+**Spring 2019 Discussion Walkthrough Videos:**
 
-- [Loss and Risk Midterm 1 Review](../resources/ds100/fa19/loss-and-risk-mt1.pdf)
-- [Logistic Regression, Classification, Evaluating Classifiers Final Review](../resources/ds100/fa19/classificationfa19.pdf)
+- [Discussion 6 Walkthrough](https://www.youtube.com/watch?v=Rigtuige5bU&feature=youtu.be) (SP19)
+- [Discussion 7 Walkthrough](https://www.youtube.com/watch?v=5-hsWWR3MXY&feature=youtu.be) (SP19)
+- [Discussion 8 Walkthrough](https://www.youtube.com/watch?v=MDtI9yYJfn0&feature=youtu.be) (SP19)
+- [Discussion 9 Walkthrough](https://www.youtube.com/watch?v=FRviVt0NNhE&feature=youtu.be) (SP19)
+- [Discussion 12 Walkthrough](https://www.youtube.com/watch?v=EfK_m1jCerM&feature=youtu.be) (SP19)
+
 
 **Exam Walkthrough Videos:**
 
@@ -75,31 +97,7 @@
 
 **Lectures:**
 
-- Lecture 20 (Logistic Regression, Cross Entropy Loss, Classification): [slides](https://docs.google.com/presentation/d/1HM3WU4a_lzYa5iz_S_XhsLC9NXy5y45h33Xm79_AStQ/edit?pli=1&ts=5dc10004#slide=id.g4df0212f45_0_0) [webcast](https://www.youtube.com/watch?v=ky8ESSqw0Pc)
-
-<br><br><br><br><br>
-
-## Archive from Previous Semesters
-
-Here are some of the resources I created over the past few semesters for Data 100. I will re-link anything that becomes relevant under "Fall 2019", so don't worry about searching through this if you're a current student.
-
-
-**Discussion Resources:**
-
-- Week 1: [slides](../resources/ds100/sp19/disc01_slides.pdf), [marked-up worksheet](../resources/ds100/sp19/disc01_markup.pdf)
-- Week 3: [marked-up worksheet](../resources/ds100/sp19/disc03_markup.pdf)
-- Week 5: [marked-up worksheet](../resources/ds100/sp19/disc05_markup.pdf)
-- Week 6: [discussion slides](../resources/ds100/sp19/disc06_slides.pdf), [marked-up worksheet](../resources/ds100/sp19/disc06_markup.pdf)
-- Week 10: [notes](../resources/ds100/sp19/disc10_notes.pdf)
-
-
-**Discussion Walkthrough Videos:**
-
-- [Discussion 6 Walkthrough](https://www.youtube.com/watch?v=Rigtuige5bU&feature=youtu.be) (SP19)
-- [Discussion 7 Walkthrough](https://www.youtube.com/watch?v=5-hsWWR3MXY&feature=youtu.be) (SP19)
-- [Discussion 8 Walkthrough](https://www.youtube.com/watch?v=MDtI9yYJfn0&feature=youtu.be) (SP19)
-- [Discussion 9 Walkthrough](https://www.youtube.com/watch?v=FRviVt0NNhE&feature=youtu.be) (SP19)
-- [Discussion 12 Walkthrough](https://www.youtube.com/watch?v=EfK_m1jCerM&feature=youtu.be) (SP19)
+- Fall 2019 Lecture 20 (Logistic Regression, Cross Entropy Loss, Classification): [slides](https://docs.google.com/presentation/d/1HM3WU4a_lzYa5iz_S_XhsLC9NXy5y45h33Xm79_AStQ/edit?pli=1&ts=5dc10004#slide=id.g4df0212f45_0_0) [webcast](https://www.youtube.com/watch?v=ky8ESSqw0Pc)
 
 
 **Review Slides**:
@@ -108,6 +106,8 @@ Here are some of the resources I created over the past few semesters for Data 10
 - [Final Review Slides (regression, BV, regularization)](http://www.surajrampure.com/resources/ds100/final_review_regression.pdf) ([exam mark-up](http://www.surajrampure.com/resources/ds100/final_review_exam_markup.pdf))  (SP19)
 - [Final Review Slides (classification, logistic regression)](http://www.surajrampure.com/resources/ds100/final_review_classification.pdf) (SP19)
 - [Final Review Slides (sampling, bootstrapping, confidence intervals)](http://www.surajrampure.com/resources/ds100/final_review_bootstrap_sampling.pdf) ([notebook](http://www.surajrampure.com/resources/ds100/final_review_bootstrap_notebook.html)) ([worksheet](http://www.surajrampure.com/resources/ds100/final_review_probability.pdf)) (SP19)
+- [Loss and Risk Midterm 1 Review](../resources/ds100/fa19/loss-and-risk-mt1.pdf) (FA19)
+- [Logistic Regression, Classification, Evaluating Classifiers Final Review](../resources/ds100/fa19/classificationfa19.pdf) (FA19)
 
 
 **Other Notes**:
