--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -51,6 +51,7 @@ Welcome to Data 100! If you're in my discussions or labs, fill out [this form](h
 | --- | --- | 
 | 1 | [slides](../resources/ds100/sp20/disc1_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc1_markup.pdf) |
 | 2 | [slides](../resources/ds100/sp20/disc2_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc2_markup.pdf) |
+| 3 | [notebook on joins and pandas](../resources/ds100/sp20/disc3-joins-pandas.html) ([raw](../resources/ds100/sp20/disc3-joins-pandas-raw.ipynb))
 
 <br><br><br><br><br>
 
