--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -55,6 +55,7 @@ Welcome to Data 100! If you're in my discussions or labs, fill out [this form](h
 | 4 | N/A (notebook only) |
 | 5 | [marked-up worksheet](../resources/ds100/sp20/disc5_markup.pdf) |
 | 6 | [slides](../resources/ds100/sp20/disc6_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc6_markup.pdf), [demo](../resources/ds100/sp20/disc6-raw.html) |
+| 7 | [slides](../resources/ds100/sp20/disc7_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc7_markup.pdf)|
 
 <br><br><br><br><br>
 
