--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -36,14 +36,9 @@
 
 ## Spring 2020
 
-- **Labs:** Tuesday 1-2PM in Evans B6, Tuesday 2-3PM in Evans B6
-- **Discussions:** Friday 12-1PM in Etcheverry 3111, Friday 1-2PM in Etcheverry 3119
-- **Office Hours:** Wednesday 3-5PM in Soda 341A
-- **Anonymous Feedback:** Fill out [this form](https://tinyurl.com/feedbacksuraj) to give me anonymous feedback on my teaching.
+**Update:** I'm still currently working out a permanent schedule for discussion and office hours given the new switch to online classes. However, everything I host will be at my Zoom link, [berkeley.zoom.us/my/surajrampure](http://berkeley.zoom.us/my/surajrampure). If you want to set up a 1-on-1 appointment, just email me! (`suraj.rampure@berkeley.edu`)
 
-<br>
-
-Welcome to Data 100! If you're in my discussions or labs, fill out [this form](https://tinyurl.com/welcometo100) to tell me more about yourself.
+**Anonymous Feedback:** Fill out [this form](https://tinyurl.com/feedbacksuraj) to give me anonymous feedback on my teaching.
 
 <br>
 
@@ -56,6 +51,7 @@ Welcome to Data 100! If you're in my discussions or labs, fill out [this form](h
 | 5 | [marked-up worksheet](../resources/ds100/sp20/disc5_markup.pdf) |
 | 6 | [slides](../resources/ds100/sp20/disc6_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc6_markup.pdf), [demo](../resources/ds100/sp20/disc6-raw.html) |
 | 7 | [slides](../resources/ds100/sp20/disc7_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc7_markup.pdf)|
+| 8 | [slides](../resources/ds100/sp20/disc8_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc8_markup.pdf)|
 
 <br><br><br><br><br>
 
