--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -36,7 +36,7 @@
 
 ## Spring 2020
 
-**Update:** I'm still currently working out a permanent schedule for discussion and office hours given the new switch to online classes. However, everything I host will be at my Zoom link, [berkeley.zoom.us/my/surajrampure](http://berkeley.zoom.us/my/surajrampure). If you want to set up a 1-on-1 appointment, just email me! (`suraj.rampure@berkeley.edu`)
+**Update:** I'm still currently working out a permanent schedule for discussion and office hours given the new switch to online classes. However, everything I host will be on Zoom. If you want to set up a 1-on-1 appointment, just email me! (`suraj.rampure@berkeley.edu`)
 
 **Anonymous Feedback:** Fill out [this form](https://tinyurl.com/feedbacksuraj) to give me anonymous feedback on my teaching.
 
