--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -52,6 +52,8 @@
 | 6 | [slides](../resources/ds100/sp20/disc6_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc6_markup.pdf), [demo](../resources/ds100/sp20/disc6-raw.html) |
 | 7 | [slides](../resources/ds100/sp20/disc7_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc7_markup.pdf)|
 | 8 | [slides](../resources/ds100/sp20/disc8_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc8_markup.pdf)|
+| 10 | [slides](../resources/ds100/sp20/disc10_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc10_markup.pdf)|
+
 
 <br><br><br><br><br>
 
