--- a/teaching/ds100.md
+++ b/teaching/ds100.md
@@ -53,6 +53,7 @@
 | 7 | [slides](../resources/ds100/sp20/disc7_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc7_markup.pdf)|
 | 8 | [slides](../resources/ds100/sp20/disc8_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc8_markup.pdf)|
 | 10 | [slides](../resources/ds100/sp20/disc10_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc10_markup.pdf)|
+| 13 | [slides](../resources/ds100/sp20/disc13_slides.pdf), [marked-up worksheet](../resources/ds100/sp20/disc13_markup.pdf)|
 
 
 <br><br><br><br><br>
